<resources>
    <string name="app_name">Base</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="text_access">Acessar</string>
    <string name="text_user">Usuário Sankhya</string>
    <string name="text_password">Senha</string>
    <string name="text_login">Conectar</string>
    <string name="text_configure">Configurar Servidor</string>
    <string name="text_server">Servidor</string>
    <string name="text_save">Salvar</string>
    <string name="text_set_server">Configure o servidor antes de continuar</string>
    <string name="text_cancel">Cancelar</string>
    <string name="ok_text">OK</string>
    <string name="text_save_user">Gravar Usuário?</string>
    <string name="text_wait_validation">Verificando liberação de uso… Aguarde…</string>
    <string name="text_image_status">Status da liberação</string>
    <string name="text_user_ok">Usuário autorizado</string>
    <string name="text_wait_timer">Processando requisição, aguarde…</string>
    <string name="text_user_empty">Usuário e senha em branco</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="text_server_hint">Servidor deve ter o formato http://seu_servidor/mge/ ou https://seu_servidor/mge/</string>
    <string name="text_back">Voltar</string>
    <string name="text_call_procedure">Chamar Procedure</string>
</resources>