<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.login.LoginActivity">

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_access"
        android:layout_margin="@dimen/full_margin"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/full_margin"
        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/text_user"
        android:maxLength="15"
        app:endIconMode="clear_text"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiLoginEditUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text|textCapCharacters"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/full_margin"
        android:hint="@string/text_password"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilLoginUser"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiLoginEditPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/scSaveUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tilLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/full_margin"
        />

    <TextView
        android:id="@+id/tvSaveUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/scSaveUser"
        app:layout_constraintTop_toTopOf="@id/scSaveUser"
        app:layout_constraintBottom_toBottomOf="@id/scSaveUser"
        android:text="@string/text_save_user"
        />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/double_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scSaveUser"
        android:text="@string/text_login"
        android:visibility="visible"
        />

    <Button
        android:id="@+id/btConfigure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/full_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvVersion"
        android:text="@string/text_configure"
        />

    <TextView
        android:id="@+id/tvResponse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btLogin"
        app:layout_constraintBottom_toTopOf="@id/btConfigure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/full_margin"
        />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/full_margin"
        tools:text="Versão 1.0.0.1"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvConfigure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/half_margin"
        android:visibility="visible"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/tvConfigureServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/text_configure"
                android:layout_margin="@dimen/full_margin"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfigure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/full_margin"
                android:hint="@string/text_server"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvConfigureServer"
                app:endIconMode="clear_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiConfigure"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btSaveServer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tilConfigure"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/double_margin"
                android:text="@string/text_save"
                />

            <Button
                android:id="@+id/btServerCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/btSaveServer"
                app:layout_constraintStart_toEndOf="@id/btSaveServer"
                app:layout_constraintBottom_toBottomOf="@id/btSaveServer"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/half_margin"
                android:text="@string/text_cancel"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/btSaveServer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/text_server_hint"
                android:layout_margin="@dimen/double_margin"
                android:textStyle="bold"
                android:textSize="14sp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>